--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <button class="btn">MESAJ GÖNDER</button>
         </div>
         <div class="child_anasayfa">
-            <img src="T:\HTML\KENDİ WEB SİTEM\img\11zon_cropped (1).png" alt="">
+            <img src="T:\HTML\KENDİ WEB SİTEM\img\.11zon_cropped (1).png" alt="">
         </div>
     </div>
 </section>
@@ -98,7 +98,7 @@
     <div class="inner_languages">
         <div class="child_languages">
             <div class="languages_img">
-                <img src="T:\HTML\KENDİ WEB SİTEM\img\c++-removebg-preview.png" alt="">
+                <img src="T:\HTML\KENDİ WEB SİTEM\.img\c++-removebg-preview.png" alt="">
             </div>
             <div class="detail">
                 <h3>C++</h3>
@@ -112,7 +112,7 @@
         </div>
         <div class="child_languages">
             <div class="languages_img">
-                <img src="T:\HTML\KENDİ WEB SİTEM\img\html_css-removebg-preview.png" alt="">
+                <img src="T:\HTML\KENDİ WEB SİTEM\.img\html_css-removebg-preview.png" alt="">
             </div>
             <div class="detail">
                 <h3>HTML CSS</h3>
@@ -125,7 +125,7 @@
         </div>
         <div class="child_languages">
             <div class="languages_img">
-                <img src="T:\HTML\KENDİ WEB SİTEM\img\images-removebg-preview.png" alt="">
+                <img src="T:\HTML\KENDİ WEB SİTEM\.img\images-removebg-preview.png" alt="">
             </div>
             <div class="detail">
                 <h3>C#</h3>
@@ -146,7 +146,7 @@
     </div>
     <div class="inner_universty">
         <div class="child_universty">
-            <img src="T:\HTML\KENDİ WEB SİTEM\img\11zon_cropped (2).png" alt="">
+            <img src="T:\HTML\KENDİ WEB SİTEM\.img\11zon_cropped (2).png" alt="">
         </div>
         <div class="child_university2">
             <div class="single_detail1">
@@ -172,7 +172,7 @@
     <div class="inner_testi">
         <div class="child_testi">
             <div class="testi_img">
-                <img src="T:\HTML\KENDİ WEB SİTEM\img\11zon_cropped.png" alt="">
+                <img src="T:\HTML\KENDİ WEB SİTEM\.img\11zon_cropped.png" alt="">
             </div>
             <p class="baslık"><b>Merhabalar!</b></p>
             <p class="icerik">Ben Türkbey YOZÇU.Sakarya Üniversitesi Yazılım Mühendisliği bölümünde 1.sınıftayım.2022
@@ -189,7 +189,7 @@
     </div>
     <div class="inner_contact">
         <div class="child_contact">
-            <img src="T:\HTML\KENDİ WEB SİTEM\img\11zon_cropped (3).png" alt="" width="981" height="613">
+            <img src="T:\HTML\KENDİ WEB SİTEM\.img\11zon_cropped (3).png" alt="" width="981" height="613">
         </div>
         <div class="child_contact">
             <form action="#">
